# binary_ninja_mcp

./: .pre-commit-config.yaml  README.md  __init__.py  config.py  pyproject.toml  ruff.toml
bridge/: __init__.py  binja_mcp_bridge.py
plugin/: __init__.py
plugin/api/: endpoints.py
plugin/core/: binary_operations.py
plugin/server/: http_server.py
plugin/utils/: auto_setup.py  number_utils.py
scripts/: mcp_client_installer.py  setup_claude_desktop.py
src/binary_ninja_mcp/: __init__.py  config.py
src/binary_ninja_mcp/bridge/: binja_mcp_bridge.py  http_client.py  mcp_response.py  runtime.py  tool_helpers.py  tools.py
src/binary_ninja_mcp/plugin/core/: binary_operations.py
src/binary_ninja_mcp/plugin/server/: handler_helpers.py  http_server.py
src/binary_ninja_mcp/plugin/utils/: auto_setup.py
tests/: __init__.py  conftest.py  test_bridge_entrypoint.py  test_fixture_integration.py  test_http_functions.py  test_mcp_helpers.py  test_mcp_registration.py  test_mcp_tools.py  test_url_encoding.py
tests/fixtures/: .gitignore  Makefile  test_binary.c
